[package]
name = "compressed-vec"
version = "0.2.0"
authors = ["Matthias Müller-Brockhausen <git@mmb2.click>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1", features=["derive"]}
serde_cbor = "0.11"
flate2 = "1"


[dev-dependencies]
insta = {version = "1"}
rand = {version = "0.8"}
rand_pcg = {version = "0.3"}